--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,5 +19,5 @@
   <%= f.label :height %> <br>
   <%= f.text_field :height %> <br>
   <br>
-  <%= f.submit %>
+  <%= f.submit 'Create User'%>
 <% end %>
