model test passing except #take_ride

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,5 +19,8 @@
   <%= f.label :height %> <br>
   <%= f.text_field :height %> <br>
   <br>
-  <%= f.submit 'Create User'%>
+  <%= f.label :admin %> <br>
+  <%= f.check_box :admin %> <br>
+  <br>
+  <%= f.submit %>
 <% end %>
