--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1> Welcome to Flatiron Amusement Park => Coding is Fun!!! :) !false </h1>
+<h3> Welcome to Flatiron Amusement Park </h3>
 
-<%= link_to "Sign In", signin_path %>
-<%= link_to "Sign Up", new_user_path%>
+<p> <%= link_to "Sign In", signin_path %> </P>
+<p> <%= link_to "Sign Up", new_user_path %> </p>
