--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,11 @@
-<h1><%=@user.name%>'s page</h1>
+<h1><%=@user.name%></h1>
 
-<p><%=@user.nausea%></p>
-<p>Mood: <%=@user.happiness%></p>
-<p><%=@user.tickets%></p>
-<p><%=@user.height%></p>
+<p> Mood: <%= @user.mood %></p>
+<p> Tickets: <%=@user.tickets%></p>
+<p> Height: <%=@user.height%></p>
+<%if @user.admin %>
+  <h3>ADMIN</h3>
+<%end%>
+
+<%=link_to "See attractions", attractions_path%>
+<%=link_to "Log Out", logout_path%>
