--- a/app/views/attractions/edit.html.erb
+++ b/app/views/attractions/edit.html.erb
@@ -16,5 +16,5 @@
   <%= f.label :min_height %> <br>
   <%= f.text_field :min_height %> <br>
   <br>
-  <%= f.submit %>
+  <%= f.submit "Update Attraction"%>
 <% end %>
