--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,5 +1,22 @@
 <h3>Attractions </h3>
 
+<table>
+  <tr>
+    <th>Attraction</th>
+    <th></th>
+    <th colspan="3"></th>
+  </tr>
 <%@attractions.each do |a|%>
-  <p><%= link_to "Go on #{a.name}", attraction_path(a)%></p>
+<tr>
+    <%if !@user.admin %>
+      <td><%= link_to "Go on #{a.name}", attraction_path(a)%></td>
+    <%end%>
+  <td><%=link_to "Show #{a.name}", attraction_path(a)%></td>
+  <td><%if @user.admin %>
+
+    <%=link_to "Edit Attraction", edit_attraction_path(a)%>
+  <%end%></td>
+</tr>
+
 <%end%>
+<%=link_to "New Attraction", new_attraction_path%>
