--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -3,15 +3,17 @@
 <p> Tickets: <%=@attraction.tickets%> </p>
 <p> Height: <%=@attraction.min_height%> </p>
 
-<br>
-<%= form_tag("/rides") do %>
-  <%= hidden_field_tag("attraction_id", "#{@attraction.id}") %>
-  <%= submit_tag "Go on this ride" %> <br>
-<% end %>
-<br>
 
-<% if @user.admin %>
-  <%= link_to "Edit attraction", edit_attraction_path(@attraction) %> <br>
+
+<% if current_user.admin %>
+  <%= link_to "Edit Attraction", edit_attraction_path(@attraction) %> <br>
+<% else %>
+  <br>
+  <%= form_tag("/rides") do %>
+    <%= hidden_field_tag("attraction_id", "#{@attraction.id}") %>
+    <%= submit_tag "Go on this ride" %> <br>
+  <% end %>
+  <br>
 <% end %>
 
 <br>
